--- a/template.html
+++ b/template.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body class="d-flex flex-column min-vh-100">
   <main class="flex-grow-1">
@@ -29,6 +30,16 @@
         </div>
       </div>
     </section>
+    <section class="container-fluid p-5">
+      <div class="row">
+        <div class="col-md-10 col-lg-8 mx-auto feeds">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-10 col-lg-8 mx-auto posts">
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer border-top py-3 mt-5">
     <div class="container-xl">
@@ -39,3 +50,8 @@
   </footer>
 </body>
 </html>
+
+<!-- <li class="list-group-item d-flex justify-content-between align-items-start">
+  <a href="https://ru.hexlet.io/courses/css-content/lessons/forms/theory_unit" class="font-weight-bold" data-id="2" target="_blank" rel="noopener noreferrer">Формы / Основы вёрстки контента</a>
+  <button type="button" class="btn btn-primary btn-sm" data-id="2" data-toggle="modal" data-target="#modal">Preview</button>
+</li> -->
