--- a/template.html
+++ b/template.html
@@ -7,6 +7,46 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body class="d-flex flex-column min-vh-100">
+  <div
+  class="modal fade"
+  id="modal"
+  tabindex="-1"
+  aria-labelledby="modal"
+  style="display: none;"
+  aria-hidden="true"
+>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title"></h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      </div>
+      <div class="modal-footer">
+        <a
+          class="btn btn-primary full-article"
+          href="https://ru.hexlet.io/courses/html-pug/lessons/iteration/theory_unit"
+          role="button"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Читать полностью
+        </a>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">
+          Закрыть
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
   <main class="flex-grow-1">
     <section class="jumbotron jumbotron-fluid bg-dark" >
       <div class="container-xl">
